# server/Service/DTO/Game/GameWinner.cs
@@ -7,10 +7,11 @@ public class UserWinnerDto : UserDto
     public string FirstName { get; set; } = null!;
     public string LastName { get; set; } = null!;
     public string FullName => $"{FirstName} {LastName}";
-    public List<int> PlayedNumbers { get; set; } = new();
+    public List<List<int>> PlayedNumbers { get; set; } = new();
     public int WinningPlays { get; set; }
+    public int TotalSpent { get; set; }
 
-    public static UserWinnerDto FromDatabase(DataAccess.Models.User user, int balance, int winningPlays, List<int> winningNumbers)
+    public static UserWinnerDto FromDatabase(DataAccess.Models.User user, int balance, int winningPlays, List<List<int>> winningNumbers, int totalSpent)
     {
         return new UserWinnerDto
         {
@@ -23,7 +24,8 @@ public class UserWinnerDto : UserDto
             CreatedAt = user.CreatedAt,
             Balance = balance,
             WinningPlays = winningPlays,
-            PlayedNumbers = winningNumbers
+            PlayedNumbers = winningNumbers,
+            TotalSpent = totalSpent
         };
     }
 }
